# blankon-installer

./: .gitignore  .travis.yml  COPYING  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
debian/: blankon-installer.substvars  changelog  control  copyright  files  install  rules
debian/blankon-installer/DEBIAN/: control  md5sums
debian/blankon-installer/sbin/: b-i-cleanup  b-i-copy-fs  b-i-setup-fs
debian/blankon-installer/usr/lib/blankon-installer/system/: languages.json  translations.id.json
po/: Makefile  Makefile.in  blankon-installer.pot  tr.po
scripts/: Makefile  Makefile.am  Makefile.in  b-i-cleanup  b-i-copy-fs  b-i-encrypt-fs  b-i-fs  b-i-get-mem-total  b-i-install-grub  b-i-is-efi  b-i-post  b-i-pre  b-i-secure-post-install  b-i-setup-fs  b-i-wipe-disk  blankon-session-try-installer
src/: Makefile  Makefile.am  Makefile.in  blankon-installer  blankon-installer.desktop  installer.c  installer.vala  main.c  main.vala  parted.c  parted.vala  utils.c  utils.vala
system/: Makefile  Makefile.am  Makefile.in  animate.css  app.css  html.min.js  index.html  installer.js  keyboards.json  languages.json  libs.js  regions.json  src.js  style.css  timezone.html  translations.id.json
tests/: functions  setup-fs
tests/parted/: Makefile.am  parted.vala  transaction-setup.sh  transaction-teardown.sh  transaction.vala
vapi/: config.vapi  javascriptcore.vapi  libsoup-2.4.vapi  parted.vapi  webkit-1.0.vapi
